--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,4 +4,5 @@ html {
   background-image: linear-gradient(to bottom right, black, #3B0A51, black);
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
